// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiDistributionTransaction set withdraw address 1`] = `
<li-transaction-stub
  block="500"
  color="#F2B134"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Update withdraw address
    
  </div>
   
  <div>
    
      To cosmos18ymm350peujvq2xy9ymyqj4v34ekvnk3wydrs3
    
  </div>
   
  <div>
    
      Network Fee: 
    <b>
      0.003
    </b>
     
    <span>
      
        ATOM
      
    </span>
  </div>
</li-transaction-stub>
`;

exports[`LiDistributionTransaction transaction without fees 1`] = `
<li-transaction-stub
  block="500"
  color="#F2B134"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Withdrawal
    
  </div>
   
  <div>
    
      From 
    <router-link-stub
      to="/validator/cosmosvaloper18ymm350peujvq2xy9ymyqj4v34ekvnk3tsekuz"
    >
      
        cosmosvaloper18ymm350peujvq2xy9ymyqj4v34ekvnk3tsekuz
      
    </router-link-stub>
  </div>
   
  <div>
    
      Network Fee: 
    <b>
      0
    </b>
     
    <span>
      
        ATOM
      
    </span>
  </div>
</li-transaction-stub>
`;

exports[`LiDistributionTransaction withdraw delegation rewards 1`] = `
<li-transaction-stub
  block="500"
  color="#F2B134"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Withdrawal
    
  </div>
   
  <div>
    
      From 
    <router-link-stub
      to="/validator/cosmosvaloper18ymm350peujvq2xy9ymyqj4v34ekvnk3tsekuz"
    >
      
        cosmosvaloper18ymm350peujvq2xy9ymyqj4v34ekvnk3tsekuz
      
    </router-link-stub>
  </div>
   
  <div>
    
      Network Fee: 
    <b>
      0.003
    </b>
     
    <span>
      
        ATOM
      
    </span>
  </div>
</li-transaction-stub>
`;

exports[`LiDistributionTransaction withdraw validator commission 1`] = `
<li-transaction-stub
  block="500"
  color="#F2B134"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Withdraw validator commission
    
  </div>
   
  <div>
    
      From
    <router-link-stub
      to="/validator/cosmos18ymm350peujvq2xy9ymyqj4v34ekvnk3wydrs3"
    >
      
        cosmos18ymm350peujvq2xy9ymyqj4v34ekvnk3wydrs3
      
    </router-link-stub>
  </div>
   
  <div>
    
      Network Fee: 
    <b>
      0.003
    </b>
     
    <span>
      
        ATOM
      
    </span>
  </div>
</li-transaction-stub>
`;
